# antivirus-gui

./: .gitignore  CMakeLists.txt  README.md  WINUI_REVIEW_NEEDED.md  winapp.yaml
.github/workflows/: windows.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  EXTRA_POINTS.md  INSTALLER.md  SUBMISSION_CHECKLIST.md  TASK_2_1.md  TASK_2_2.md  TASK_2_3.md  TESTING.md  defense.md  final-audit.md  pr-descriptions.md  pre-winui-checklist.md
docx/: README.md  answers.md  checklist.md  demo.md  powershell-commands.md
installer/: AntivirusGui.nsi  README.md  build-installer.ps1  config.example.json  install.ps1  uninstall.ps1
rpc/: AntivirusRpc.idl
scripts/demo/: README.md  build-release.ps1  corrupt-primary-db.ps1  create-test-threats.ps1  install-service.ps1  prepare-backup-recovery.ps1  prepare-license.ps1  prepare-mock-update-recovery.ps1  show-logs.ps1
src/common/: app_paths.cpp  app_paths.h  logging.cpp  logging.h  process_hardening.cpp  process_hardening.h  rpc_memory.cpp  rpc_memory.h  secure_stop_confirmation.cpp  secure_stop_confirmation.h  win_error.cpp  win_error.h
src/common/security/: process_dacl.cpp  process_dacl.h
src/gui/: ActivationDialog.cpp  ActivationDialog.h  AppLifecycle.cpp  AppLifecycle.h  AuthDialog.cpp  AuthDialog.h  MainWindow.cpp  MainWindow.h  ParentProcessCheck.cpp  ParentProcessCheck.h  RpcClient.cpp  RpcClient.h  SecureStopConfirmation.cpp  SecureStopConfirmation.h  ServiceClient.cpp  ServiceClient.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  TrayController.cpp  TrayController.h  main.cpp  security_hardening.cpp  security_hardening.h
src/service/: AuthHttpClient.cpp  AuthHttpClient.h  AuthManager.cpp  AuthManager.h  AuthState.h  FeatureGate.cpp  FeatureGate.h  LicenseManager.cpp  LicenseManager.h  ProcessLauncher.cpp  ProcessLauncher.h  RpcServer.cpp  RpcServer.h  SecureStopConfirmation.cpp  SecureStopConfirmation.h  ServiceMain.cpp  ServiceMain.h  SessionManager.cpp  SessionManager.h  main.cpp  security_hardening.cpp  security_hardening.h
src/service/scan/: AhoCorasickScanner.cpp  AhoCorasickScanner.h  AvDatabase.cpp  AvDatabase.h  AvDatabaseStorage.cpp  AvDatabaseStorage.h  AvUpdateClient.cpp  AvUpdateClient.h  AvUpdateScheduler.cpp  AvUpdateScheduler.h  DirectoryMonitor.cpp  DirectoryMonitor.h  FileScanner.cpp  FileScanner.h  ScanEngine.cpp  ScanEngine.h
src/tools/: AntivirusCtl.cpp
src/winui/: RpcClientWin.cpp  RpcClientWin.h  main.cpp
tests/: ScanEngineTests.cpp
