cmake_minimum_required(VERSION 3.24)

project(
    AntivirusGuiProject
    VERSION 0.1.0
    DESCRIPTION "Educational Windows antivirus GUI scaffold"
    LANGUAGES C CXX
)

option(ANTIVIRUS_BUILD_GUI "Build the Qt Widgets GUI application" ON)
option(ANTIVIRUS_BUILD_SERVICE "Build the Windows service executable" ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(WIN32)
    set(ANTIVIRUS_MIDL_SEARCH_PATHS)
    if(CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION)
        list(APPEND ANTIVIRUS_MIDL_SEARCH_PATHS
            "C:/Program Files (x86)/Windows Kits/10/bin/${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}/x64"
        )
    endif()
    file(GLOB ANTIVIRUS_WINDOWS_KIT_MIDL_PATHS "C:/Program Files (x86)/Windows Kits/10/bin/*/x64")
    list(APPEND ANTIVIRUS_MIDL_SEARCH_PATHS ${ANTIVIRUS_WINDOWS_KIT_MIDL_PATHS})
    find_program(MIDL_EXECUTABLE NAMES midl.exe PATHS ${ANTIVIRUS_MIDL_SEARCH_PATHS} REQUIRED)
    set(ANTIVIRUS_RPC_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated/rpc")
    set(ANTIVIRUS_RPC_IDL "${CMAKE_CURRENT_SOURCE_DIR}/rpc/AntivirusRpc.idl")
    set(ANTIVIRUS_RPC_HEADER "${ANTIVIRUS_RPC_GENERATED_DIR}/AntivirusRpc.h")
    set(ANTIVIRUS_RPC_CLIENT "${ANTIVIRUS_RPC_GENERATED_DIR}/AntivirusRpc_c.c")
    set(ANTIVIRUS_RPC_SERVER "${ANTIVIRUS_RPC_GENERATED_DIR}/AntivirusRpc_s.c")

    add_custom_command(
        OUTPUT
            "${ANTIVIRUS_RPC_HEADER}"
            "${ANTIVIRUS_RPC_CLIENT}"
            "${ANTIVIRUS_RPC_SERVER}"
        COMMAND "${CMAKE_COMMAND}" -E make_directory "${ANTIVIRUS_RPC_GENERATED_DIR}"
        COMMAND "${MIDL_EXECUTABLE}" /nologo /env x64 /char signed /out "${ANTIVIRUS_RPC_GENERATED_DIR}" "${ANTIVIRUS_RPC_IDL}"
        DEPENDS "${ANTIVIRUS_RPC_IDL}"
        VERBATIM
    )

    add_custom_target(AntivirusRpcGenerated
        DEPENDS
            "${ANTIVIRUS_RPC_HEADER}"
            "${ANTIVIRUS_RPC_CLIENT}"
            "${ANTIVIRUS_RPC_SERVER}"
    )

    add_library(AntivirusRpcClient STATIC
        "${ANTIVIRUS_RPC_CLIENT}"
        src/common/rpc_memory.cpp
        src/common/rpc_memory.h
    )

    target_include_directories(AntivirusRpcClient
        PUBLIC
            "${ANTIVIRUS_RPC_GENERATED_DIR}"
            src
    )

    target_compile_definitions(AntivirusRpcClient
        PUBLIC
            WIN32_LEAN_AND_MEAN
            NOMINMAX
    )

    target_link_libraries(AntivirusRpcClient PUBLIC Rpcrt4)
    add_dependencies(AntivirusRpcClient AntivirusRpcGenerated)

    add_library(AntivirusRpcServer STATIC
        "${ANTIVIRUS_RPC_SERVER}"
        src/common/rpc_memory.cpp
        src/common/rpc_memory.h
    )

    target_include_directories(AntivirusRpcServer
        PUBLIC
            "${ANTIVIRUS_RPC_GENERATED_DIR}"
            src
    )

    target_compile_definitions(AntivirusRpcServer
        PUBLIC
            WIN32_LEAN_AND_MEAN
            NOMINMAX
    )

    target_link_libraries(AntivirusRpcServer PUBLIC Rpcrt4)
    add_dependencies(AntivirusRpcServer AntivirusRpcGenerated)
endif()

add_library(AntivirusCommon STATIC
    src/common/app_paths.cpp
    src/common/app_paths.h
    src/common/logging.cpp
    src/common/logging.h
    src/common/process_hardening.cpp
    src/common/process_hardening.h
    src/common/security/process_dacl.cpp
    src/common/security/process_dacl.h
    src/common/win_error.cpp
    src/common/win_error.h
)

target_include_directories(AntivirusCommon
    PUBLIC
        src
)

target_compile_definitions(AntivirusCommon
    PUBLIC
        UNICODE
        _UNICODE
        WIN32_LEAN_AND_MEAN
        NOMINMAX
)

if(MSVC)
    target_compile_options(AntivirusCommon PRIVATE /W4 /permissive- /utf-8)
else()
    target_compile_options(AntivirusCommon PRIVATE -Wall -Wextra -Wpedantic)
endif()

if(ANTIVIRUS_BUILD_GUI)
    find_package(Qt6 REQUIRED COMPONENTS Widgets)
    qt_standard_project_setup()

    qt_add_executable(AntivirusGui WIN32
        src/gui/AppLifecycle.cpp
        src/gui/AppLifecycle.h
        src/gui/MainWindow.cpp
        src/gui/MainWindow.h
        src/gui/AuthDialog.cpp
        src/gui/AuthDialog.h
        src/gui/ActivationDialog.cpp
        src/gui/ActivationDialog.h
        src/gui/ParentProcessCheck.cpp
        src/gui/ParentProcessCheck.h
        src/gui/RpcClient.cpp
        src/gui/RpcClient.h
        src/gui/SecureStopConfirmation.cpp
        src/gui/SecureStopConfirmation.h
        src/gui/security_hardening.cpp
        src/gui/security_hardening.h
        src/gui/ServiceClient.cpp
        src/gui/ServiceClient.h
        src/gui/SingleInstanceGuard.cpp
        src/gui/SingleInstanceGuard.h
        src/gui/TrayController.cpp
        src/gui/TrayController.h
        src/gui/main.cpp
    )

    target_link_libraries(AntivirusGui
        PRIVATE
            AntivirusCommon
            AntivirusRpcClient
            Qt6::Widgets
            Advapi32
            Credui
            Rpcrt4
    )

    target_compile_definitions(AntivirusGui PRIVATE ANTIVIRUS_APP_VERSION="${PROJECT_VERSION}")

    if(MSVC)
        target_compile_options(AntivirusGui PRIVATE /W4 /permissive- /utf-8)
    else()
        target_compile_options(AntivirusGui PRIVATE -Wall -Wextra -Wpedantic)
    endif()

    get_target_property(ANTIVIRUS_QMAKE_EXECUTABLE Qt6::qmake IMPORTED_LOCATION)
    get_filename_component(ANTIVIRUS_QT_BIN_DIR "${ANTIVIRUS_QMAKE_EXECUTABLE}" DIRECTORY)
    find_program(ANTIVIRUS_WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${ANTIVIRUS_QT_BIN_DIR}" REQUIRED)

    install(TARGETS AntivirusGui RUNTIME DESTINATION bin)

    install(CODE "
        message(STATUS \"Deploying Qt runtime with windeployqt\")
        execute_process(
            COMMAND \"${ANTIVIRUS_WINDEPLOYQT_EXECUTABLE}\"
                --release
                --no-translations
                --dir \"\${CMAKE_INSTALL_PREFIX}/bin\"
                \"\${CMAKE_INSTALL_PREFIX}/bin/AntivirusGui.exe\"
            RESULT_VARIABLE ANTIVIRUS_WINDEPLOYQT_RESULT
        )
        if(NOT ANTIVIRUS_WINDEPLOYQT_RESULT EQUAL 0)
            message(FATAL_ERROR \"windeployqt failed with code \${ANTIVIRUS_WINDEPLOYQT_RESULT}\")
        endif()
    ")
endif()

if(ANTIVIRUS_BUILD_SERVICE)
    add_executable(AntivirusService
        src/service/ProcessLauncher.cpp
        src/service/ProcessLauncher.h
        src/service/SecureStopConfirmation.cpp
        src/service/SecureStopConfirmation.h
        src/service/security_hardening.cpp
        src/service/security_hardening.h
        src/service/AuthHttpClient.cpp
        src/service/AuthHttpClient.h
        src/service/AuthManager.cpp
        src/service/AuthManager.h
        src/service/FeatureGate.cpp
        src/service/FeatureGate.h
        src/service/LicenseManager.cpp
        src/service/LicenseManager.h
        src/service/RpcServer.cpp
        src/service/RpcServer.h
        src/service/ServiceMain.cpp
        src/service/ServiceMain.h
        src/service/SessionManager.cpp
        src/service/SessionManager.h
        src/service/main.cpp
    )

    target_link_libraries(AntivirusService
        PRIVATE
            AntivirusCommon
            AntivirusRpcServer
            Advapi32
            Credui
            Rpcrt4
            Userenv
            Winhttp
            Wtsapi32
    )

    target_compile_definitions(AntivirusService PRIVATE ANTIVIRUS_APP_VERSION="${PROJECT_VERSION}")

    if(MSVC)
        target_compile_options(AntivirusService PRIVATE /W4 /permissive- /utf-8)
    else()
        target_compile_options(AntivirusService PRIVATE -Wall -Wextra -Wpedantic)
    endif()

    install(TARGETS AntivirusService RUNTIME DESTINATION bin)
endif()

install(FILES README.md DESTINATION .)
install(DIRECTORY docs/ DESTINATION docs)
install(DIRECTORY installer/ DESTINATION installer)

if(WIN32)
    set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION bin)
    include(InstallRequiredSystemLibraries)

    set(CPACK_VERBATIM_VARIABLES TRUE)
    set(CPACK_GENERATOR "NSIS")
    set(CPACK_PACKAGE_NAME "AntivirusGui")
    set(CPACK_PACKAGE_VENDOR "Antivirus Coursework")
    set(CPACK_PACKAGE_CONTACT "student@example.local")
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Educational Windows antivirus GUI with service")
    set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
    set(CPACK_PACKAGE_FILE_NAME "AntivirusGuiInstaller-${PROJECT_VERSION}-win64")
    set(CPACK_PACKAGE_INSTALL_DIRECTORY "Antivirus GUI")

    set(CPACK_NSIS_DISPLAY_NAME "Antivirus GUI")
    set(CPACK_NSIS_PACKAGE_NAME "Antivirus GUI")
    set(CPACK_NSIS_INSTALL_ROOT "$PROGRAMFILES64")
    set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
    set(CPACK_NSIS_EXECUTABLES_DIRECTORY "bin")
    set(CPACK_NSIS_MUI_FINISHPAGE_RUN "AntivirusGui.exe")
    set(CPACK_NSIS_MODIFY_PATH OFF)

    set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS [=[
        DetailPrint "Removing old AntivirusGuiService if it exists"
        ExecWait 'taskkill.exe /im AntivirusGui.exe /f'
        ExecWait 'taskkill.exe /im AntivirusService.exe /f'
        ExecWait 'sc.exe delete antivirusguiservice'

        DetailPrint "Installing AntivirusGuiService"
        ExecWait '"$INSTDIR\bin\AntivirusService.exe" --install'
        ExecWait 'sc.exe failure antivirusguiservice reset= 60 actions= restart/1000/restart/1000/restart/1000'
        ExecWait 'sc.exe failureflag antivirusguiservice 1'
        ExecWait 'sc.exe start antivirusguiservice'
    ]=])

    set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS [=[
        DetailPrint "Stopping Antivirus GUI"
        ExecWait 'taskkill.exe /im AntivirusGui.exe /f'

        DetailPrint "Stopping AntivirusGuiService"
        ExecWait 'taskkill.exe /im AntivirusService.exe /f'

        DetailPrint "Removing AntivirusGuiService"
        ExecWait '"$INSTDIR\bin\AntivirusService.exe" --uninstall'
        ExecWait 'sc.exe delete antivirusguiservice'
    ]=])

    include(CPack)
endif()